--- a/作业2.ipynb
+++ b/作业2.ipynb
@@ -95,7 +95,10 @@
     "    # 构造API请求URL\n",
     "    api_url = repo_url.replace(\"https://github.com/\", \"https://api.github.com/repos/\") + \"/commits\"\n",
     "    # 发送API请求\n",
-    "    response = requests.get(api_url,verify=False)\n",
+    "    try:\n",
+    "        response = requests.get(api_url,verify=False)\n",
+    "    except:\n",
+    "        return None\n",
     "    # 解析API响应\n",
     "    data = response.json()\n",
     "    # 初始化推送次数和日期\n",
