--- a/作业2.ipynb
+++ b/作业2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "\n",
     "# 读取Excel文件\n",
-    "原始数据 = R'000_《统计与数据分析》课程第一次作业收集_提交统计.xlsx'  \n",
+    "原始数据 = R'data\\000_《统计与数据分析》课程第一次作业收集_提交统计.xlsx'  \n",
     "工作表 = '提交清单'  # 替换为你要读取的工作表名称\n",
     "列名列表 = ['姓名', '学号', 'Github仓库地址']  # 替换为你要读取的列名列表\n",
     "\n",
