--- a/作业3-数据读写查询.ipynb
+++ b/作业3-数据读写查询.ipynb
@@ -11,11 +11,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读写csv格式数据\n",
+    "作业提交信息 = pd.read_csv(R'data\\第一次作业提交信息.csv', encoding='GBK', usecols=['姓名', '学号', 'Github仓库地址'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "作业提交信息.to_csv(R'output\\csv读写结果.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读写Excel文件\n",
+    "原始数据 = R'data\\000_《统计与数据分析》课程第一次作业收集_提交统计.xlsx'  \n",
+    "工作表 = '提交清单'  # 替换为你要读取的工作表名称\n",
+    "列名列表 = ['姓名', '学号', 'Github仓库地址']  # 替换为你要读取的列名列表\n",
+    "\n",
+    "# 读取指定列数据\n",
+    "df1 = pd.read_excel(原始数据, sheet_name=工作表, usecols=列名列表)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_excel('output/excel写入练习.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "作业提交信息 = pd.read_csv(R'第一次作业提交信息.csv', encoding='GBK', usecols=['姓名', '学号', 'Github仓库地址'])"
+    "# 读写SPSS的sav格式数据\n",
+    "df2 = pd.read_spss(R'data\\identity.sav')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyreadstat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3,mata = pyreadstat.read_sav('data\\identity.sav', formats_as_ordered_category = True)"
    ]
   },
   {
@@ -24,7 +86,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "作业提交信息.to_csv(R'csv读写结果.csv', index=False)"
+    "df3.to_excel('output/sav数据zhuancun.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取pdf中的表格数据\n",
+    "import pdfplumber\n",
+    "\n",
+    "pdf = pdfplumber.open('data\\高考核心词汇1278.pdf')\n",
+    "\n",
+    "table = []\n",
+    "for i in range(len(pdf.pages) - 1):\n",
+    "    page = pdf.pages[i + 1]\n",
+    "    table.extend(page.extract_table())\n",
+    "table1_df = pd.DataFrame(table[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table1_df.to_excel('output/pdf表格提取结果.xlsx')"
    ]
   }
  ],
